# bot-trading-crypto

./: .dockerignore  .env.example  .gitignore  CHECKLIST.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  dashboard.md  deployment.md  paper-trading-review-template.md  paper-trading-runbook.md  roadmap.md
src/bit/: __init__.py  __main__.py  config.py  healthcheck.py  pipeline.py  runner.py
src/bit/bybit/: __init__.py  auth.py  client.py  parsers.py
src/bit/dashboard/: __init__.py  __main__.py  app.py  health.py  models.py  readiness.py  service.py
src/bit/domain/: __init__.py  decisions.py  enums.py  execution.py  features.py  journal.py  market.py  risk.py  signals.py
src/bit/services/: __init__.py  credential_check.py  decision_engine.py  execution_engine.py  exit_evaluator.py  feature_engine.py  journal.py  market_data.py  paper_portfolio.py  (+4 more)
tests/: conftest.py  test_healthcheck.py  test_pipeline_exit.py  test_runner.py
tests/bybit/: fixtures.py  test_auth.py  test_client.py  test_parsers.py
tests/dashboard/: test_health.py  test_models.py  test_readiness.py  test_routes.py  test_service.py
tests/domain/: test_models.py
tests/services/: test_credential_check.py  test_decision_engine.py  test_execution_engine.py  test_exit_evaluator.py  test_feature_engine.py  test_market_data.py  test_paper_portfolio.py  test_portfolio_store.py  test_risk_engine.py  test_runner_state.py  test_signal_engine.py
tests/strategies/: test_breakout_confirmation.py  test_strategies.py  test_trend_continuation.py
(+6 files in other folders)
